# NPC_Rust_Engine

./: Cargo.toml  install_ollama.sh  llama3_runner.py  setup.sh  weave.py
abis/: AutographCatalog.json  AutographData.json  NPCAccessControls.json  NPCPublication.json  NPCRent.json  SpectatorRewards.json
src/: main.rs
src/bib/: ai.rs  constants.rs  contracts.rs  graph.rs  ipfs.rs  lens.rs  llama.rs  mod.rs  types.rs  utils.rs  venice.rs
src/classes/: escena_estudio.rs  game_timer.rs  mod.rs  npc_aleatorio.rs
src/lib/: constants.rs  types.rs  utils.rs
