[package]
name = "npc_engine_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8"
once_cell = "1.17.1"
lazy_static = "1.4"
game_pathfinding = "0.1.3"
tungstenite = "0.21.0"
futures-util = "0.3.30"
tokio-tungstenite = "0.21.0"
url = "2.5.0"
