[package]
name = "npc_engine_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8"
once_cell = "1.17.1"
tungstenite = "0.21.0"
futures-util = "0.3.30"
tokio-tungstenite = "0.21.0"
pathfinding = "4.9.1"
rayon = "1.5.1"
ethers = { version = "2.0.14", features = ["rustls"] }
base64 = "0.22.1"
uuid = { version = "1.8.0", features = ["v4"] }
reqwest = {version = "0.12.4",features = ["json", "multipart", "blocking", "native-tls", "rustls-tls"] }
log = "0.4.22"
chrono = "0.4.38"
unicode-normalization = "0.1.24"
unicode-general-category = "0.6.0"
native-tls = "0.2.12"
strum = "0.26.3"
regex = "1.11.1"
futures = "0.3.31"


